<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>rentasad</groupId>
	<artifactId>rentasad.tools.airportsDatabase</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<name>Airports Database Tool</name>
<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<!-- DEPENDENCIES VERSIONS -->
		<maven-clean-plugin>3.1.0</maven-clean-plugin>
		<maven-resources-plugin>3.2.0</maven-resources-plugin>
		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
		<maven-surefire-plugin>3.0.0-M5</maven-surefire-plugin>
		<maven-jar-plugin>3.2.0</maven-jar-plugin>
		<maven-install-plugin>3.0.0-M1</maven-install-plugin>
		<maven-deploy-plugin>3.0.0-M1</maven-deploy-plugin>
		<maven-site-plugin>3.9.1</maven-site-plugin>
		<mavenProjectInfoReportsPlugin>3.1.2</mavenProjectInfoReportsPlugin>
		<!-- 
		VERSION PROPERTY 
		-->
		<!-- USING WITH ${basicToolParentVersion} -->
		<basicToolParentVersion>B2.0.0</basicToolParentVersion>
	</properties>
	<build>
	
		<plugins>
		<plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.0.0</version>
            <configuration>
                <mainClass>rentasad.tools.airportsDatabase.CreateAirportDatabaseMain</mainClass>
            </configuration>
        </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin}</version>
				<configuration>
					<!-- <source>1.8</source> -->
					<release>11</release>
				</configuration>
			</plugin>
			<!-- The Maven-Surefire-Plugin is needed to make Unittests while building -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin}</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
			<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>${maven-site-plugin}</version>
      </plugin>
			
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>4.6</version>
		</dependency>
		<dependency>
			<groupId>org.ini4j</groupId>
			<artifactId>ini4j</artifactId>
			<version>0.5.4</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<version>3.36.0.1</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.16</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.14.1</version>
		</dependency>


	</dependencies>
</project>
